# dotfiles

./: .chezmoiexternal.toml  .chezmoiignore  .dotfiles.toml  .gitignore  AGENTS.md  INSTALL.md  Makefile.py  README.md  chezmoi.toml.example  devport.yaml  dot_gitconfig.tmpl  dot_p10k.zsh  dot_tmux.conf  dot_zprofile  dot_zsh_inits  dot_zshenv  dot_zshrc  dotfile_stow.py  dotfile_stow_test.py
docs/: dotfile-stow-design.md  fzf-matcher-spec.md  structured-logging.md
dot_claude/: symlink_CLAUDE.md.tmpl  symlink_skills.tmpl
dot_config/mise/: config.toml
dot_local/share/: symlink_chezmoi.tmpl
dot_zsh_inits/: p10k
dotfiles/: .dmux.global.json  .gitconfig.tmpl  .zprofile  .zshenv  .zshrc
dotfiles/.claude/: settings.json
dotfiles/.codex/: config.toml
dotfiles/.config/devport/: devport.toml
dotfiles/.config/hayeah/: config.toml
dotfiles/.zsh_inits/: antigen  fzf  p10k  vite-plus
golib/: go.mod  go.sum
golib/logger/: logger.go
hayeah/: pyproject.toml
hayeah-ts/: package.json  pnpm-lock.yaml
hayeah-ts/fzfmatch/: package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
hayeah-ts/fzfmatch/src/: fzfmatch.test.ts  fzfmatch.ts  index.ts
hayeah-ts/src/: index.ts  logger.ts
hayeah/src/hayeah/: __init__.py  config.py  fzfmatch_test.py  logger.py
hayeah/src/hayeah/core/: __init__.py  config.py  fzfmatch.py  fzfmatch_test.py  fzfmatch_testdata.json  logger.py
skills/: .gitignore
skills/browser/: SKILL.md  package.json  pnpm-lock.yaml
skills/browser/docs/: plugin-system-spec.md
skills/browser/plugins/chatgpt/: SKILL.md  agentmonkey.json  common.ts  conversation.node.ts  conversation.ts  package.json  plugin.json  share.ts  vite.config.ts
skills/browser/src/: README.md  browser.ts  context-spec.ts  emulation.ts  main.ts  oneshot.ts  session.ts  with-page.ts
skills/browser/src/commands/: accessibility.ts  close.ts  content.ts  cookies.ts  eval.ts  fetch.ts  list.ts  nav.ts  network.ts  new.ts  open.ts  pick.ts  plugins.ts  profile.ts  reload.ts  screencap.ts  screenshot.ts  start.ts
skills/browser/src/content/: index.ts  types.ts  utils.ts
skills/browser/src/content/extractors/: chatgpt-post.ts  chatgpt.ts  default.ts
skills/browser/src/plugins/: build.ts  loader.ts  match.ts  types.ts
skills/chezmoi/: SKILL.md
skills/cloudflare-tunnel/: README.md  pyproject.toml
skills/cloudflare-tunnel/docs/: DESIGN.md
skills/cloudflare-tunnel/examples/now/: README.md  server.py
skills/cloudflare-tunnel/src/cloudflare_tunnel/: config.py  log.py  main.py  tunnel.py
skills/ctrlv/: .gitignore  Makefile.py  SKILL.md  pyproject.toml
skills/ctrlv/src/ctrlv/: clipboard.py  main.py  writer.py  writer_test.py
skills/dotenv-ls/: .gitignore  SKILL.md  pyproject.toml
skills/dotenv-ls/src/dotenv_ls/: main.py  parser.py  parser_test.py
skills/dotfiles/: SKILL.md
skills/git-quick-clone/: INSTALL.md  Makefile.py  SKILL.md  pyproject.toml
skills/git-quick-clone/docs/: source-format.md  test_cases.json
skills/git-quick-clone/src/git_quick_clone/: clone.py  main.py  parser.py  parser_test.py
skills/gobin/: .gitignore  README.md  pyproject.toml
skills/gobin/docs/: gobin-design.md
skills/gobin/src/gobin/: gobin.py  main.py
skills/golang/: SKILL.md  wire.md
skills/imagegen/: CLI.md  INSTALL.md  Makefile.py  README.md  SKILL.md  pyproject.toml
skills/imagegen/src/hayeah/imagegen/: __init__.py  attachments_test.py  cli.py  gemini.py  gemini_test.py  openai.py  openai_test.py
skills/imagegen/src/imagegen/: attachments.py  gemini_cmd.py  gemini_cmd_test.py  main.py  openai_cmd.py  openai_cmd_test.py
skills/jsoninspect/: .gitignore  README.md  pyproject.toml
skills/jsoninspect/src/jsoninspect/: cli.py  inspector.py
skills/mdnote/: SKILL.md
skills/plist/: README.md  pyproject.toml
skills/plist/src/plist_inspect/: cli.py  layers.py  render.py
skills/pydocmd/: pyproject.toml
skills/pydocmd/src/hayeah/pydocmd/: __init__.py  cli.py
skills/python/: SKILL.md  notebook.md  pymake.md
skills/react/: SKILL.md
skills/readme-skill/: SKILL.md
skills/resend/: Makefile.py  SKILL.md  pyproject.toml
skills/resend/src/resend_email/: main.py
skills/shell-helper/: Makefile.py  SKILL.md  aliases.sh  helpers.sh  pyproject.toml
skills/shell-helper/src/shell_helper/: agent_codex_test.py  agent_state_test.py  claude_notify.py  cli.py  editor.py  fzf.py  log.py  main.py  mdnote.py  project.py  project_test.py  tmux.md  tmux.py
skills/shell-helper/src/shell_helper/agent/: __init__.py  bridge.py  claude.py  codex.py  state.py  telegram.py
skills/shell-helper/src/shell_helper/claude/: __init__.py  bridge.py  notify.py  telegram.py  transcript.py
skills/tailwind-design/: SKILL.md
skills/telegram/: pyproject.toml
skills/telegram/src/telegram_cli/: main.py
skills/text-copyedit/: SKILL.md
skills/tmuxcap/: README.md  pyproject.toml
skills/tmuxcap/src/tmuxcap/: capture.py  clean.py  main.py  render.py
skills/typescript/: SKILL.md  react-mobx.md
web/: globals.css  package.json  pnpm-lock.yaml  tsconfig.base.json
web/devport-dashboard/: index.html  package.json  vite.config.ts
web/devport-dashboard/src/: App.tsx
web/template/: package.json  vite.config.ts
web/template/src/: App.tsx  main.tsx
