[project]
name = "cloudflare-tunnel"
version = "0.1.0"
description = "CLI for managing Cloudflare Tunnel ingress rules and DNS records"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "cloudflare",
    "hayeah-core",
]

[tool.uv.sources]
hayeah-core = { path = "../../hayeah", editable = true }

[project.scripts]
cloudflare-tunnel = "cloudflare_tunnel.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudflare_tunnel"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "pyright",
]

[tool.pytest.ini_options]
testpaths = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src"]
typeCheckingMode = "basic"
