[project]
name = "dotenv-ls"
version = "0.1.0"
description = "List env var names from .env files with override tracking"
requires-python = ">=3.11"
dependencies = [
    "typer",
]

[project.scripts]
dotenv-ls = "dotenv_ls.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dotenv_ls"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "pyright",
]

[tool.pytest.ini_options]
testpaths = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src"]
typeCheckingMode = "basic"
