[project]
name = "git-quick-clone"
version = "0.1.0"
description = "Clone GitHub repos with smart defaults, sparse checkout, and shallow depth"
requires-python = ">=3.11"
dependencies = [
    "typer",
]

[project.scripts]
git-quick-clone = "git_quick_clone.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/git_quick_clone"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "pyright",
]

[tool.pytest.ini_options]
testpaths = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src"]
typeCheckingMode = "basic"
