[project]
name = "hayeah-imagegen"
version = "0.1.0"
description = "AI image generation library with OpenAI and Gemini providers"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "openai",
    "google-genai",
    "python-dotenv",
    "hayeah-core",
]

[tool.uv.sources]
hayeah-core = { path = "../../hayeah", editable = true }

[project.scripts]
imagegen = "hayeah.imagegen.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hayeah"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "pyright",
]

[tool.pytest.ini_options]
testpaths = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src"]
typeCheckingMode = "basic"
