[project]
name = "jsoninspect"
version = "0.1.0"
description = "Pretty-print and colorize JSON structure with string truncation"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15",
    "rich>=13",
]

[project.scripts]
jsoninspect = "jsoninspect.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jsoninspect"]

[tool.ruff]
line-length = 100

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
