[project]
name = "plist-inspect"
version = "0.1.0"
description = "Explore macOS plist preferences with layered inspection and fuzzy domain search"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15",
    "rich>=13",
    "hayeah-core",
    "jsoninspect",
]

[project.scripts]
plist = "plist_inspect.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plist_inspect"]

[tool.ruff]
line-length = 100

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
