[project]
name = "hayeah-pydocmd"
version = "0.1.0"
description = "Extract Python API docs as markdown from docstrings"
requires-python = ">=3.11"
dependencies = [
    "typer",
]

[project.scripts]
pydocmd = "hayeah.pydocmd.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hayeah"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "pyright",
]

[tool.pytest.ini_options]
testpaths = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src"]
typeCheckingMode = "basic"
