[project]
name = "shell-helper"
version = "0.1.0"
description = "Project root detection, project name inference, and editor launching"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "httpx",
]

[project.scripts]
shell-helper = "shell_helper.main:run"
claude-notify = "shell_helper.claude.notify:app"
telegram = "shell_helper.claude.telegram:app"
claude-tg-bridge = "shell_helper.claude.bridge:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shell_helper"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "pyright",
]

[tool.pytest.ini_options]
testpaths = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src"]
typeCheckingMode = "basic"
