[project]
name = "telegram-cli"
version = "0.1.0"
description = "Send Telegram messages and files via bot API"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "httpx",
    "hayeah",
]

[tool.uv.sources]
hayeah = { path = "../../hayeah", editable = true }

[project.scripts]
telegram = "telegram_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_cli"]
